# J3ktMan

./: .gitignore  README.md  \  pyproject.toml  rxconfig.py
.web/: reflex.json
J3ktMan/: J3ktMan.py  utils.py
J3ktMan/component/: base.py  create_milestone_dialog.py  create_project_dialog.py  create_task_dialog.py  drag_zone.py  draggable_card.py  invite_member_dialog.py  milestone_dialog.py  navbar.py  project_card.py  protected.py  sidebar.py  task_diaglog.py  task_dialog.py  task_elipsis.py  timeline.py
J3ktMan/component/Dashboard/: bar_chart.py  dashboard_card.py  pie_chart.py
J3ktMan/crud/: project.py  tasks.py
J3ktMan/model/: project.py  tasks.py
J3ktMan/page/: dashboard.py  home.py  index.py  join_project.py  kanban.py  members.py  profile.py  signin.py  signup.py  timeline.py
J3ktMan/secret/: clerk.py
J3ktMan/state/: home_state.py  project.py
alembic/versions/: 3a36be54f4f1_add_tasks.py  bb9f86df333c_add_start_and_end_date_for_the_task.py  db27691ace7e_add_invitation_code.py  e1d704e09e4f_.py
