[project]
dependencies = [
    "reflex==0.6.8",
    "reflex-clerk @ git+https://github.com/Simmypeet/reflex-clerk@fix/signup",
    "authlib==1.3.2",
    "python-dotenv==1.0.1",
]
name = "J3ktMan"
version = "0.0.1"
description = "J3ktMan"
requires-python = ">=3.12"

[tool.setuptools]
py-modules = []

# Black formatter
[tool.black]
line-length = 79

# Pyright linter
[tool.pyright]
typeCheckingMode = "standard"
